--- a/app/src/main/res/layout/manager_feedback_item.xml
+++ b/app/src/main/res/layout/manager_feedback_item.xml
@@ -1,15 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         >
+        <ImageView
+            android:id="@+id/image_feedback"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            />
         <TextView
+            android:id="@+id/edit_phoneName"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/image_feedback"
+            android:layout_width="wrap_content"
+            android:fontFamily="@font/dosis_bold"
+            android:textColor="@color/colorBlack"
+            android:layout_height="wrap_content"
+            android:text="Tên người gửi"
+
+            />
+        <TextView
+            android:id="@+id/reason"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/dosis_bold"
+            android:layout_below="@+id/edit_phoneName"
+            android:layout_toRightOf="@+id/image_feedback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            
+            android:text="Lý do"
             />
+
+        <TextView
+            android:id="@+id/describe"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/dosis_bold"
+            android:layout_below="@+id/reason"
+            android:layout_toRightOf="@+id/image_feedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Miêu tả"
+            />
+        <ImageView
+            android:id="@+id/imageDel"
+            android:layout_width="60dp"
+            android:layout_alignParentRight="true"
+            android:layout_height="60dp"
+            android:src="@drawable/ic_baseline_delete_forever_24"
+            android:layout_centerVertical="true"
+            />
+
     </RelativeLayout>
 </RelativeLayout>
