--- a/app/src/main/res/layout/manager_user_item.xml
+++ b/app/src/main/res/layout/manager_user_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
 
     >
     <RelativeLayout
@@ -45,14 +45,7 @@
             android:layout_below="@+id/Role"
             android:text="so dien thoai"
             />
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_baseline_delete_forever_24"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_margin="10dp"
-            />
+
 
     </RelativeLayout>
 
