--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,24 +17,27 @@
         android:background="#FFFFFF"
         >
         <LinearLayout
-            android:layout_width="390dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:padding="3dp"
+            android:layout_margin="10dp"
             android:background="@drawable/background_toolbar"
             >
             <EditText
                 android:id="@+id/edit_search"
-                android:layout_width="320dp"
+                android:layout_width="match_parent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 />
             <ImageView
-                android:layout_width="35dp"
+                android:layout_width="65dp"
                 android:src="@drawable/ic_search"
                 android:layout_height="35dp"
+                android:layout_weight="1"
                 />
         </LinearLayout>
     </Toolbar>
