--- a/app/src/main/res/layout/phone_item.xml
+++ b/app/src/main/res/layout/phone_item.xml
@@ -2,11 +2,10 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="190dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="10dp"
     app:cardCornerRadius="10dp"
     android:layout_height="220dp"
     android:padding="10dp"
+    android:layout_margin="10dp"
     >
     <RelativeLayout
         android:layout_width="match_parent"
