--- a/app/src/main/res/layout/carts_item.xml
+++ b/app/src/main/res/layout/carts_item.xml
@@ -66,7 +66,7 @@
         android:layout_marginTop="26dp"
         android:layout_centerVertical="true"
         android:layout_marginEnd="28dp"
-        android:src="@drawable/ic_baseline_indeterminate_check_box_24"
+        android:background="@drawable/ic_baseline_indeterminate_check_box_24"
         />
 
     <TextView
@@ -90,5 +90,7 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="6dp"
         android:layout_toStartOf="@+id/text_amount"
-        android:src="@drawable/ic_baseline_add_box_24" />
+        android:background="@drawable/ic_baseline_add_box_24"
+
+        />
 </RelativeLayout>
