--- a/app/src/main/res/menu/menu_profile_admin.xml
+++ b/app/src/main/res/menu/menu_profile_admin.xml
@@ -23,10 +23,15 @@
             />
 
         <item
+            android:id="@+id/nav_statistical"
+            android:title="@string/statistical"
+            />
+
+        <item
             android:id="@+id/nav_logout"
             android:title="@string/menu_logout"
-
             />
+
         </menu>
         </item>
     </group>
