--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-    >
+    tools:context=".LoginActivity">
 
     <View
         android:id="@+id/topView"
@@ -15,7 +14,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
 
         />
 
@@ -86,10 +84,10 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="16dp"
-        android:textStyle="bold"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,8 +99,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="8dp"
-        android:text="Lưu mật khẩu"
         android:fontFamily="@font/regular"
+        android:text="Lưu mật khẩu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,8 +113,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="32dp"
-        android:fontFamily="@font/regular"
         android:background="@drawable/round_bg"
+        android:fontFamily="@font/regular"
         android:text="@string/login"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -132,9 +130,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/regular"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_bg"
+        android:fontFamily="@font/regular"
         android:text="@string/register"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -151,8 +149,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/forgot_password"
         android:fontFamily="@font/regular"
+        android:text="@string/forgot_password"
         android:textColor="@color/colorBlue"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -160,14 +158,67 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnregister" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="5dp"
-        android:layout_height="13dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview2"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="104dp"
+        app:cardCornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/cardview1"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
+        app:layout_constraintVertical_bias="0.341">
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/sign_facebook"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/ic_baseline_facebook_24"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            tools:layout_editor_absoluteX="272dp"
+            tools:layout_editor_absoluteY="595dp" />
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview1"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="104dp"
+        app:cardCornerRadius="30dp"
+
+        app:layout_constraintEnd_toStartOf="@+id/cardview2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
+        android:layout_marginTop="10dp"
+        app:layout_constraintVertical_bias="0.413"
+        >
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signin_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+        <ImageView
+            android:id="@+id/google"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/ic_google"
+            android:textColor="#ffffff"
+            android:textSize="22sp"
+            tools:layout_editor_absoluteX="272dp"
+            tools:layout_editor_absoluteY="595dp" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
