--- a/app/src/main/res/layout/activity_register_profile.xml
+++ b/app/src/main/res/layout/activity_register_profile.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/relative_register"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".RegisterActivity">
+    tools:context=".RegisterProfileActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -66,20 +67,7 @@
         android:hint="@string/hoten"
         android:padding="16dp" />
 
-    <EditText
-        android:layout_below="@id/edSdt"
-        android:padding="16dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/edEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_border"
-        android:hint="@string/email"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:drawablePadding="16dp"
-        android:drawableStart="@drawable/ic_lock"
-        />
+
     <EditText
         android:layout_below="@+id/edUserHoTen"
         android:padding="16dp"
@@ -94,40 +82,13 @@
         android:drawablePadding="16dp"
         android:drawableStart="@drawable/ic_lock"
         />
-    <EditText
-        android:layout_below="@+id/edEmail"
-        android:padding="16dp"
-        android:id="@+id/edMk"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_border"
-        android:hint="@string/mk"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:drawablePadding="16dp"
-        android:drawableStart="@drawable/ic_lock"
-        />
-    <EditText
-        android:layout_below="@+id/edMk"
-        android:padding="16dp"
-        android:id="@+id/ednhaplai"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/round_border"
-        android:layout_marginTop="10dp"
-        android:hint="@string/nhaplai"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:drawablePadding="16dp"
-        android:drawableStart="@drawable/ic_lock"
-        />
+
     <Button
         android:padding="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="32dp"
         android:id="@+id/btnregister"
-        android:layout_below="@id/ednhaplai"
+        android:layout_below="@id/edSdt"
         android:background="@drawable/round_bg"
         android:layout_width="match_parent"
         android:textStyle="bold"
