--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -75,13 +75,23 @@
                     android:textColor="@color/colorBlack"
                     android:textSize="25dp" />
 
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_phone"
                     android:layout_width="match_parent"
+                    android:visibility="gone"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/text_title"
                     android:layout_margin="10dp"
                     android:layout_marginTop="0dp" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar2"
+                    android:layout_below="@+id/text_title"
+                    android:layout_centerHorizontal="true"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </RelativeLayout>
 
         </ScrollView>
